fix user info on mobile device

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -27,6 +27,7 @@ body {
   background-position: top;
   background-repeat: no-repeat;
 }
+
 .page {
   margin-top: 2 * $spacer;
   margin-bottom: 2 * $spacer;
@@ -57,5 +58,5 @@ body {
 }
 
 .user-info {
-  min-width: 800px;
+  min-width: 400px;
 }
